Plumb through task id from Arc accessibility

This change replaces most of the mappings required for package name to
tree source translations. It results in a lot of cleanup namely:
- removal of all package name specifics
- removal of various observations for task id creation/activeness
- removal of current task id state
- removal of fallback tree

Test: open many apps. Verify touch explore, ChromeVox interactions
work (e.g. actions, browsing, etc).
Bug: 768532
Change-Id: Ic6f679fc8bb3f649334a29f98e86a34b52e5cfbc