chrome/browser/chromeos/arc/accessibility/arc_accessibility_helper_bridge.h
@@ -69,25 +69,19 @@ class ArcAccessibilityHelperBridge
   void OnAction(const ui::AXActionData& data) const override;
 
   // ArcAppListPrefs::Observer overrides.
-  void OnTaskCreated(int task_id,
-                     const std::string& package_name,
-                     const std::string& activity,
-                     const std::string& intent) override;
   void OnTaskDestroyed(int32_t task_id) override;
-  void OnTaskSetActive(int32_t task_id) override;
 
   // ArcNotificationSurfaceManager::Observer overrides.
   void OnNotificationSurfaceAdded(ArcNotificationSurface* surface) override;
   void OnNotificationSurfaceRemoved(ArcNotificationSurface* surface) override;
 
-  const std::map<std::string, std::unique_ptr<AXTreeSourceArc>>&
-  package_name_to_tree_for_test() {
-    return package_name_to_tree_;
+  const std::map<int32_t, std::unique_ptr<AXTreeSourceArc>>&
+  task_id_to_tree_for_test() {
+    return task_id_to_tree_;
   }
-  const std::map<std::string, std::set<int32_t>>&
-  package_name_to_task_ids_for_test() {
-    return package_name_to_task_ids_;
-  }
+
+ protected:
+  virtual int32_t GetActiveWindowTaskId();
 
  private:
   // exo::WMHelper::ActivationObserver overrides.
@@ -96,7 +90,7 @@ class ArcAccessibilityHelperBridge
 
   void OnActionResult(const ui::AXActionData& data, bool result) const;
 
-  AXTreeSourceArc* GetOrCreateFromPackageName(const std::string& package_name);
+  AXTreeSourceArc* GetOrCreateFromTaskId(int32_t task_id);
   AXTreeSourceArc* CreateFromNotificationKey(
       const std::string& notification_key);
   AXTreeSourceArc* GetFromNotificationKey(
@@ -107,12 +101,9 @@ class ArcAccessibilityHelperBridge
   ArcBridgeService* const arc_bridge_service_;
   ArcNotificationSurfaceManager* arc_notification_surface_manager_;
   mojo::Binding<mojom::AccessibilityHelperHost> binding_;
-  std::map<std::string, std::unique_ptr<AXTreeSourceArc>> package_name_to_tree_;
+  std::map<int32_t, std::unique_ptr<AXTreeSourceArc>> task_id_to_tree_;
   std::map<std::string, std::unique_ptr<AXTreeSourceArc>>
       notification_key_to_tree_;
-  std::map<std::string, std::set<int32_t>> package_name_to_task_ids_;
-  int32_t current_task_id_;
-  std::unique_ptr<AXTreeSourceArc> fallback_tree_;
 
   DISALLOW_COPY_AND_ASSIGN(ArcAccessibilityHelperBridge);
 };
