chrome/browser/chromeos/arc/accessibility/ax_tree_source_arc.h
@@ -52,7 +52,7 @@ class AXTreeSourceArc
 
   void NotifyActionResult(const ui::AXActionData& data, bool result);
 
-  void Focus(aura::Window* window);
+  void SetFocusToActiveWindow();
 
   int32_t window_id() const { return window_id_; }
 
